# parallel-exam

./: .env.example  Dockerfile  README.md  fly.toml  plan.md  pyproject.toml
.github/workflows/: test.yml
app/: config.py  jobs.py  llm.py  main.py  models.py
app/pipeline/: extract.py  generate.py  parse.py  prose.py  render.py  reword.py  template.py  verify.py
app/pipeline/templates_library/: __init__.py  rational_business_profit.py
app/static/: style.css
app/templates/: base.html  review.html  upload.html
app/templates/partials/: variant_card.html
research/: paper_2508.08833_robustness_llm_math.md  paper_2511.07932_isomorphic_math_problems.md  paper_education_ai_exam_generation.md
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
tests/fixtures/: Ex 1º B Deriva CCNN con.docx  Ex Analisis 1º Bach .docx  derivadas2.doc.docx  derivadas3.doc.docx
