[project]
name = "parallel-exam"
version = "0.1.0"
description = "Generate parallel/equivalent variants of math exams for make-up tests"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",       # FastAPI file uploads
    "pydantic>=2.10",
    "pydantic-settings>=2.7",

    "anthropic>=0.40",
    "sympy>=1.13",
    "pypandoc>=1.14",                 # uses system pandoc binary
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "httpx>=0.28",                    # for FastAPI test client
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
